--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,15 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+  collector:
+    build: .
+    env_file:
+      - .env
+    environment:
+      MYSQL_HOST: mysql
+    volumes:
+      - .:/app
+    depends_on:
+      - mysql
 volumes:
   mysql_data:
