Add Meta multi-account support

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ AD_PROVIDERS=meta,google
 
 # Meta Ads configuration
 META_ACCESS_TOKEN=
+# Optional: comma separated list of ad account IDs.
+# If empty, all accounts accessible to the token will be used.
 META_AD_ACCOUNT_ID=
 META_APP_ID=
 META_APP_SECRET=
